--- a/css/styles.css
+++ b/css/styles.css
@@ -769,7 +769,7 @@ footer {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding: 75px 39px 164px 41px;
+  padding: 40px 39px 164px 41px;
 }
 
 .form-field {
@@ -777,6 +777,12 @@ footer {
   flex-direction: column;
   text-align: left;
   padding: 10px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 100%;
+  letter-spacing: 1%;
+  color: rgba(117, 117, 117, 1);
+  gap: 4px;
 }
 .form-field input {
   margin: 0;
@@ -800,15 +806,57 @@ footer {
   font-size: 20px;
   line-height: 100%;
   letter-spacing: 3%;
+
   text-align: center;
   color: rgba(33, 33, 33, 1);
+  padding-bottom: 12px;
 }
 
-.form-field label {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 100%;
-  letter-spacing: 1%;
-  color: rgba(117, 117, 117, 1);
-  margin-bottom: 4px;
+.submit-btn {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 2.14;
+  letter-spacing: 6%;
+  text-align: center;
+  background-color: var(--accent-color);
+  color: #ffffff;
+  padding: 10px 52px 10px 52px;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  &:hover,
+  &:focus {
+    background-color: var(--accent-hover-color);
+  }
+}
+
+.form-field {
+  position: relative;
+}
+.modal-svg {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  top: 50%;
+  left: 15px;
+  transform: translatex(50%);
+}
+textarea {
+  resize: none;
+  cursor: pointer;
+  border-radius: 4px;
+  &:hover,
+  &:focus {
+    border-color: var(--accent-hover-color);
+  }
+}
+.form-input:hover ~ .modal-svg {
+  fill: var(--accent-hover-color);
+}
+
+.form-input:actived ~ .modal-svg {
+  opacity: 0;;
 }
