--- a/css/styles.css
+++ b/css/styles.css
@@ -763,6 +763,7 @@ footer {
 .modal-button:hover {
   cursor: pointer;
   fill: var(--accent-hover-color);
+  transition: transform 250ms var(--timing-function);
 }
 
 .form {
@@ -785,13 +786,13 @@ footer {
   gap: 4px;
 }
 .form-field input {
-  margin: 0;
   height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   &:hover {
     border: 1px solid var(--accent-hover-color);
     cursor: pointer;
+    transition: transform 250ms var(--timing-function);
   }
 }
 .form-field input::placeholder {
@@ -820,7 +821,6 @@ footer {
   font-size: 16px;
   line-height: 2.14;
   letter-spacing: 6%;
-  text-align: center;
   background-color: var(--accent-color);
   color: #ffffff;
   padding: 10px 52px 10px 52px;
@@ -830,14 +830,19 @@ footer {
   &:hover,
   &:focus {
     background-color: var(--accent-hover-color);
+    transition: transform 250ms var(--timing-function);
   }
 }
-
+.form-input {
+  display: flex;
+  padding-left: 42px;
+}
 .form-field {
   position: relative;
 }
 .modal-svg {
   position: absolute;
+  display: flex;
   width: 18px;
   height: 18px;
   top: 50%;
@@ -847,16 +852,51 @@ footer {
 textarea {
   resize: none;
   cursor: pointer;
+  padding-top: 12px;
+  padding-left: 16px;
   border-radius: 4px;
   &:hover,
   &:focus {
     border-color: var(--accent-hover-color);
+    transition: transform 250ms var(--timing-function);
   }
 }
 .form-input:hover ~ .modal-svg {
   fill: var(--accent-hover-color);
 }
 
-.form-input:actived ~ .modal-svg {
-  opacity: 0;;
+.checkbox {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  position: absolute;
+}
+.label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 400;
+  gap: 10px;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 3%;
+}
+
+
+.checkbox-icon {
+  position: relative;
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border-radius: 4px;
+  border: 2px solid black;
+}
+
+.checkbox:checked + .checkbox-icon {
+  background-color: var(--accent-hover-color);
+  background-image: url(../images/Vector\ \(1\).svg);
+  background-origin:border-box;
+  background-size: contain;
+  transition: transform 250ms var(--timing-function);
 }
