--- a/css/styles.css
+++ b/css/styles.css
@@ -735,7 +735,7 @@ footer {
 .modal {
   position: absolute;
   width: 528px;
-  height: 581px;
+  height: 620px;
   background-color: rgba(255, 255, 255, 1);
   top: 50%;
   left: 50%;
@@ -823,6 +823,7 @@ footer {
   letter-spacing: 6%;
   background-color: var(--accent-color);
   color: #ffffff;
+  margin-top: 30px;
   padding: 10px 52px 10px 52px;
   border-radius: 4px;
   border: none;
