--- a/css/styles.css
+++ b/css/styles.css
@@ -884,7 +884,6 @@ textarea {
   letter-spacing: 3%;
 }
 
-
 .checkbox-icon {
   position: relative;
   display: inline-block;
@@ -896,8 +895,51 @@ textarea {
 
 .checkbox:checked + .checkbox-icon {
   background-color: var(--accent-hover-color);
-  background-image: url(../images/Vector\ \(1\).svg);
-  background-origin:border-box;
+  background-image: url(../images/Vector\\(1\).svg);
+  background-origin: border-box;
   background-size: contain;
   transition: transform 250ms var(--timing-function);
+}
+
+.subscribe-us-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+.subscribe {
+  display: inline-block;
+}
+.subscribe-us {
+  background-color: rgba(47, 48, 58, 1);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  padding: 15px 0px 15px 16px;
+  width: 100%;
+}
+
+.subscribe-us-btn {
+  position: relative;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 2.14;
+  letter-spacing: 6%;
+  background-color: var(--accent-color);
+  color: #ffffff;
+  padding: 10px 62px 10px 28px;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
+
+.subscribe-svg {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  right: -60%;
+  transform: translateY(-50%);
+  fill: var(--primary-white-color);
 }
